<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_final"
    tools:context=".SignUpActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginBottom="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="25dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="3dp"
        app:cardPreventCornerOverlap="false"
        app:cardUseCompatPadding="true">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="568dp">

            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="match_parent"
                android:layout_height="128dp"
                android:background="@color/linear"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/circle"
                    android:padding="10dp"
                    android:src="@drawable/img_register"
                    app:tint="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="20dp"
                    android:fontFamily="sans-serif-medium"
                    android:text="LOGIN"
                    android:textColor="@color/white"
                    android:textSize="22sp" />

            </LinearLayout>

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_below="@+id/linearLayout1"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="-10dp"
                android:rotation="45"
                android:src="@drawable/square" />


            <RelativeLayout
                android:id="@+id/relativeLayout6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linearLayout1"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="40dp"
                android:layout_marginRight="30dp">

                <ImageView
                    android:id="@+id/imgView_usernameIcon"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@color/linear"
                    android:padding="8dp"
                    android:src="@drawable/img_username"
                    app:tint="@color/white" />

                <EditText
                    android:id="@+id/etUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/imgView_usernameIcon"
                    android:layout_alignParentTop="true"
                    android:layout_toRightOf="@+id/imgView_usernameIcon"
                    android:background="@color/editTextBG"
                    android:hint="Username"
                    android:paddingLeft="20dp"
                    android:textSize="15sp" />

            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/relativeLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/relativeLayout6"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="40dp"
                android:layout_marginRight="30dp">

                <ImageView
                    android:id="@+id/imgView_passwordIcon"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@color/linear"
                    android:padding="8dp"
                    android:src="@drawable/img_authentication"
                    app:tint="@color/white" />

                <EditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/imgView_passwordIcon"
                    android:layout_alignParentTop="true"
                    android:layout_toRightOf="@+id/imgView_passwordIcon"
                    android:background="@color/editTextBG"
                    android:hint="Password"
                    android:inputType="textPassword"
                    android:paddingLeft="20dp"
                    android:textSize="15sp" />

            </RelativeLayout>


            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/relativeLayout2"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="23dp"
                android:layout_marginRight="30dp"
                android:backgroundTint="@color/linear"
                android:fontFamily="sans-serif-medium"
                android:text="LOG IN"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/txtLOg1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/btnLogin"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="30dp"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_horizontal"
                android:text="OR "
                android:textSize="20sp"
                android:textStyle="italic" />

            <Button
                android:id="@+id/btnFB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtLOg1"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="30dp"
                android:backgroundTint="@color/btnFacebook"
                android:text="Log in with Facebook" />
            <Button
            android:id="@+id/btngoogle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnFB"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:backgroundTint="@color/btnGoogle"
            android:text="Log in with Google"
            android:textColor="@color/black" />
            <Button
                android:id="@+id/btnregnew"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/btngoogle"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="30dp"
                android:backgroundTint="@color/linear"
                android:text="Register here"
                android:textColor="@color/black" />


        </RelativeLayout>


    </androidx.cardview.widget.CardView>

</RelativeLayout>

