<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_final"
    tools:context=".SignUpActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginBottom="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="25dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="3dp"
        app:cardPreventCornerOverlap="false"
        app:cardUseCompatPadding="true">

        <RelativeLayout
            android:layout_width="343dp"
            android:layout_height="666dp">

            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/linear"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/circle"
                    android:padding="10dp"
                    android:src="@drawable/img_register"
                    app:tint="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="20dp"
                    android:fontFamily="sans-serif-medium"
                    android:text="REGISTER"
                    android:textColor="@color/white"
                    android:textSize="22sp" />

            </LinearLayout>

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_below="@+id/linearLayout1"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="-10dp"
                android:rotation="45"
                android:src="@drawable/square" />

            <RelativeLayout
                android:id="@+id/relativeLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageView1"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="30dp">

                <ImageView
                    android:id="@+id/imgView_userIcon"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@color/linear"
                    android:padding="8dp"
                    android:src="@drawable/img_user"
                    app:tint="@color/white" />

                <EditText
                    android:id="@+id/etName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/imgView_userIcon"
                    android:layout_alignParentTop="true"
                    android:layout_toRightOf="@+id/imgView_userIcon"
                    android:background="@color/editTextBG"
                    android:hint="Name"
                    android:paddingLeft="20dp"
                    android:textSize="15sp" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relativeLayout5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/relativeLayout1"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="30dp">

                <ImageView
                    android:id="@+id/imgView_lnameIcon"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@color/linear"
                    android:padding="8dp"
                    android:src="@drawable/img_phone"
                    app:tint="@color/white" />

                <EditText
                    android:id="@+id/etPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/imgView_lnameIcon"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="0dp"
                    android:layout_marginTop="-4dp"
                    android:layout_marginBottom="4dp"
                    android:layout_toRightOf="@+id/imgView_lnameIcon"
                    android:background="@color/editTextBG"
                    android:hint="Phone"
                    android:paddingLeft="20dp"
                    android:textSize="15sp" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relativeLayout6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/relativeLayout5"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="30dp">

                <ImageView
                    android:id="@+id/imgView_usernameIcon"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@color/linear"
                    android:padding="8dp"
                    android:src="@drawable/img_username"
                    app:tint="@color/white" />

                <EditText
                    android:id="@+id/etUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/imgView_usernameIcon"
                    android:layout_alignParentTop="true"
                    android:layout_toRightOf="@+id/imgView_usernameIcon"
                    android:background="@color/editTextBG"
                    android:hint="Username"
                    android:paddingLeft="20dp"
                    android:textSize="15sp" />

            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/relativeLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/relativeLayout6"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="30dp">

                <ImageView
                    android:id="@+id/imgView_passwordIcon"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@color/linear"
                    android:padding="8dp"
                    android:src="@drawable/img_authentication"
                    app:tint="@color/white" />

                <EditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/imgView_passwordIcon"
                    android:layout_alignParentTop="true"
                    android:layout_toRightOf="@+id/imgView_passwordIcon"
                    android:background="@color/editTextBG"
                    android:hint="Password"
                    android:inputType="textPassword"
                    android:paddingLeft="20dp"
                    android:textSize="15sp" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relativeLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/relativeLayout2"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="30dp">

                <ImageView
                    android:id="@+id/imgView_ConfirmPassword"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@color/linear"
                    android:padding="8dp"
                    android:src="@drawable/img_authentication"
                    app:tint="@color/white" />

                <EditText
                    android:id="@+id/etConfirm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/imgView_ConfirmPassword"
                    android:layout_alignParentTop="true"
                    android:layout_toRightOf="@+id/imgView_ConfirmPassword"
                    android:background="@color/editTextBG"
                    android:hint="Confirm Password"
                    android:inputType="textPassword"
                    android:paddingLeft="20dp"
                    android:textSize="15sp" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relativeLayout4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/relativeLayout3"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="30dp">

                <ImageView
                    android:id="@+id/imgView_emailIcon"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@color/linear"
                    android:padding="8dp"
                    android:src="@drawable/img_email"
                    app:tint="@color/white" />

                <EditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/imgView_emailIcon"
                    android:layout_alignParentTop="true"
                    android:layout_toRightOf="@+id/imgView_emailIcon"
                    android:background="@color/editTextBG"
                    android:hint="Email"
                    android:paddingLeft="20dp"
                    android:textSize="15sp" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relativeLayout7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/relativeLayout4"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="30dp">

                <ImageView
                    android:id="@+id/imgView_AddressIcon"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@color/linear"
                    android:padding="8dp"
                    android:src="@drawable/img_country"
                    app:tint="@color/white" />

                <EditText
                    android:id="@+id/etAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/imgView_AddressIcon"
                    android:layout_alignParentTop="true"
                    android:layout_toRightOf="@+id/imgView_AddressIcon"
                    android:background="@color/editTextBG"
                    android:hint="Address"
                    android:paddingLeft="20dp"
                    android:textSize="15sp" />

            </RelativeLayout>


            <Button
                android:id="@+id/btnSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/relativeLayout7"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="30dp"
                android:backgroundTint="@color/linear"
                android:fontFamily="sans-serif-medium"
                android:text="SIGN UP"
                android:textSize="20sp"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/tvALready"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/btnSignUp"
                android:layout_marginTop="8dp"
                android:gravity="center_horizontal"
                android:text="Already have an account?"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/tvLogin"
                android:text="Login Here"
                android:textSize="25sp"
                android:textColor="@color/linear"
                android:textStyle="bold|italic"
                android:gravity="clip_horizontal"
                android:layout_width="200dp"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="90dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvALready"/>


        </RelativeLayout>


    </androidx.cardview.widget.CardView>
    </ScrollView>

</RelativeLayout>

