...
            android:backgroundTint="#CFD5D4"
            android:text="Continue Shopping"
            android:textColor="#6A6262"
            android:visibility="gone" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
...
            android:id="@+id/btnDelete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="6dp"
            android:layout_weight="1"
            android:backgroundTint="#D60C0C"
            android:text="Delete"
            android:textColor="@color/white"
            android:visibility="gone" />

    </LinearLayout>

</LinearLayout>
