<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_baseline_shopping_cart_24"
        android:title="@string/title_cart" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_baseline_account_circle_24"
        android:title="@string/title_profile" />
    <item
        android:id="@+id/navigation_maps"
        android:icon="@drawable/ic_baseline_location_on_24"
        android:title="@string/title_location" />





</menu>