...
    android:layout_margin="6dp"
    android:padding="5dp"
    android:layout_height="wrap_content">


    <CheckBox
        android:id="@+id/cbCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:buttonTint="#F879A4"
        android:layout_gravity="center"/>


...
